[tool.poetry]
name = "OOP Card Game - Higher or Lower"
version = "1.0.0"
description = "Solution to errors and sequence loop from Leila (@leilahallingg)"
authors = ["Seron Chanderabose <replit.com/@Seronchanderabo>"]

[tool.poetry.dependencies]
python = ">=3.8.0,<3.9"

[tool.poetry.dev-dependencies]
debugpy = "^1.6.2"
replit-python-lsp-server = {extras = ["yapf", "rope", "pyflakes"], version = "^1.5.9"}

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"